# haut-auth-service

./: .gitignore  GEMINI.md  LICENSE  Makefile  README.md
.github/workflows/: build.yml
haut-auth/: Cargo.toml  Makefile
haut-auth/etc/config/: haut-auth
haut-auth/etc/init.d/: haut-auth
haut-auth/src/: crypto.rs  http.rs  json.rs  main.rs  srun.rs
haut-auth/usr/lib/python3/haut-auth/: check_self_service.py  main.py  request_things.py  utils.py
